--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/_DailySummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/_DailySummaryPartial.cshtml
@@ -12,7 +12,7 @@
     <a class="button" style="padding: 3px; margin-left: 10px" id="daysum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('daysum'); return false">Filter</a>
 </div>
 <div id="daysumGrid"></div>
-<div id="example" class="k-content">
+<div id="daysumChartSection" class="k-content">
     <div class="configuration k-widget k-header" style="width: 170px; float: right">
         <span class="configHead">Base date unit</span>
         <ul class="options">
@@ -72,6 +72,6 @@
         </ul>
     </div>
     <div class="chart-wrapper">
-        <div id="chart"></div>
+        <div id="daysumChart"></div>
     </div>
 </div>
